# CommonVoiceSentenceGen

./: .gitignore  README.md  config.toml.example  contribution-guidelines.txt  pyproject.toml
src/: config.py  logger.py  main.py  models.py
